src/test/ui/or-patterns/multiple-pattern-typo.stderr
error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:8:15
   |
LL |         1 | 2 || 3 => (),
   |               ^^ help: use a single `|` to specify multiple patterns: `|`

error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:13:16
   |
LL |         (1 | 2 || 3) => (),
   |                ^^ help: use a single `|` to specify multiple patterns: `|`

error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:18:16
   |
LL |         (1 | 2 || 3,) => (),
   |                ^^ help: use a single `|` to specify multiple patterns: `|`

error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:25:18
   |
LL |         TS(1 | 2 || 3) => (),
   |                  ^^ help: use a single `|` to specify multiple patterns: `|`

error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:32:23
   |
LL |         NS { f: 1 | 2 || 3 } => (),
   |                       ^^ help: use a single `|` to specify multiple patterns: `|`

error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:37:16
   |
LL |         [1 | 2 || 3] => (),
   |                ^^ help: use a single `|` to specify multiple patterns: `|`

warning: the feature `or_patterns` is incomplete and may cause the compiler to crash
  --> $DIR/multiple-pattern-typo.rs:1:12
   |
LL | #![feature(or_patterns)]
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 6 previous errors

